2023-03-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha02: Baltimore';git push
	git tag -a 5.1.6-alpha02 -m 'all: fix NCZarr overwrite/removal;	ncremap cpl dmn';git push --tags

	* ncremap add x2[aglro]_n[xy] dimensions and dom[lr]_[lat/lon] variables for coupler land and river domains to database

	* ncremap correct lon/lat dimension keys in error HINT

	* Hint that error code -137, "NetCDF: NCZarr error" can be a NCZarr codec decompression issue

2023-03-14  Charlie Zender  <zender@uci.edu>

	* Call nco_fl_rm(fl_ncz) not nco_fl_rm(fl_psx)

	* Fix nco_drc_ncz_rm() to attempt nc_open(ncz_fl) not nc_open(psx_fl)

	* NCO 5.1.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha01: Baltimore';git push
	git tag -a 5.1.6-alpha01 -m 'Functionally identical to 5.1.5';git push --tags

	* Update supported netCDF library versions

	* NCO 5.1.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5: Rhubarb Pi';git push
	git tag -a 5.1.5 -m 'all: tgl->abs, NCZarr chk drc, dnd rgl fl; ncrcat: no_cll_mth; ncremap eamxx pdq plev, CF, prs_stt_usr fix plev_nm, ps_rtn, mss_val var_lst_zmid';git push --tags

	* NCO 5.1.5-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-beta01: Heisler Picnic';git push
	git tag -a 5.1.5-beta01 -m 'all: tgl->abs, NCZarr chk drc, dnd rgl fl; ncrcat: no_cll_mth; ncremap eamxx pdq plev, CF, prs_stt_usr fix plev_nm, ps_rtn, mss_val var_lst_zmid';git push --tags

	* Document new features for 5.1.5

	* Peter Caldwell verifies roundtrip mss_val vertical interpolation works for him

2023-03-13  Charlie Zender  <zender@uci.edu>

	* Tweak NCZarr debug verbosity and information reported

	* NCO 5.1.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha04: Rehab paddling';git push
	git tag -a 5.1.5-alpha04 -m 'all: Toggle->Absolute; ncremap ps_rtn, vrt mss_val';git push --tags
